--- a/templates/index_new.html
+++ b/templates/index_new.html
@@ -18,6 +18,8 @@
 	        <li name="tab_link">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
 	       	<li name="tab_link" class="active" id="tab_4"><a href="#">PLAIN PARSER</a></li>
 	       	<li name="tab_link">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
+	       	<li name="tab_link" class="active" id="tab_7"><a href="#">FAST PARSER</a></li>
+	       	<li name="tab_link">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
 	        <li name="tab_link" class="active" id="tab_5"><a href="#">COUNT PROTEINS</a></li>
 	        <li name="tab_link">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
 	        <li name="tab_link" class="active" id="tab_6"><a href="#">MERGE MS2/MS3 FILES</a></li>
@@ -29,6 +31,7 @@
 	  <div id="tab_1" name="tab_body"></div>
 	  <div id="tab_2" name="tab_body" style="display: none"></div>
 	  <div id="tab_4" name="tab_body" style="display: none"></div>
+	  <div id="tab_7" name="tab_body" style="display: none"></div>
 	  <div id="tab_5" name="tab_body" style="display: none"></div>
 	  <div id="tab_6" name="tab_body" style="display: none"></div>
 	  <div id="tab_3" name="tab_body" style="display: none"></div>
@@ -59,6 +62,31 @@
             }
           })
     }
+
+    function inverse_file_load2(tab_number){
+      	var val = $('div[id="tab_2"]').find("#reporterIonType").val();
+      	console.log("inverse load 2 index")
+        console.log("reporterIonType value is " + val);
+        $.ajax({
+            type:"POST",
+            url:"reporterIonType",
+            data:{"ionType": val},
+            success : function(result){
+              console.log("Retrieved Ion Types");
+              console.log("from index file load 2");
+              console.log(result);
+              inverse_files = JSON.parse(result);
+              $('div[id="tab_2"]').find('#reporterInverseFiles').empty();
+              $.each(inverse_files, function(i, filename) {
+                $('div[id="tab_2"]').find('#reporterInverseFiles').append($('<option>').text(filename).attr('inverse_file', filename));
+              });
+            },
+            error: function(response, textStatus, HTTPError){
+              console.log("Error");
+              console.log(response);
+            }
+          })
+    }
 	</script>
 
 	  <script type="text/javascript">
@@ -78,8 +106,11 @@
 	  	$('[name=tab_body]').each(function(index){
 	  		if ($(this).attr('id') == id) {
 					$(this).show();
-					if (id == "tab_2" || id == "tab_1"){
+					if (id == "tab_1"){
 						inverse_file_load(id);
+					}
+					if (id == "tab_2"){
+						inverse_file_load2(id);
 					}
 	  		} else {
 	  			$(this).hide();
