Reverted duplicating sequences and model count.  Removed reporter mod option when plain and quick parsing.

--- a/templates/tab_7.html
+++ b/templates/tab_7.html
@@ -54,7 +54,7 @@
       <div class="input-group" style="margin: 1%">
         <span class="input-group-addon" id="basic-addon1">Modifications</span>
         <select class='form-control' id="unacceptableMods" multiple="multiple">
-          <option value="ISOBARIC_LABEL@Y" selected>Reporter Ion modifies with Y-hydroxyl</option>
+          <!-- <option value="ISOBARIC_LABEL@Y" selected>Reporter Ion modifies with Y-hydroxyl</option> -->
           <option value="15.994915@M">Oxidation (M)</option>
           <option value="31.98983@M" selected>Dioxidation (M)</option>
           <option value="15.994915@W" selected>Oxidation (W)</option>
