--- a/templates/tab_3.html
+++ b/templates/tab_3.html
@@ -677,6 +677,7 @@
 
       },
       error : function(response, textStatus, HTTPError){
+        alert("Check to make sure IDEAA server is running.");
         console.log('error creating inverse');
         console.log(response.responseText);
       }
