--- a/templates/tab_6.html
+++ b/templates/tab_6.html
@@ -76,11 +76,13 @@
       }
     ],function(err, result){
       console.log("in final waterfall catcher");
-      if (typeof result == "undefined"){
-        alert("Check to see if IDEAA server is running.");
-      }
-      else{
-        alert(err)
+      if(err){
+        if (err == "error: undefined"){
+          alert("Check to see if IDEAA server is running.");
+        }
+        else{
+          alert(err);
+        }
       }
       var difference = new Date() - startTime;
       rightSide.append("<div>MILLISECONDS TAKEN: " + difference + " <div>")
