Wording for fast parse sidebar.

--- a/templates/tab_7.html
+++ b/templates/tab_7.html
@@ -159,7 +159,7 @@
       //   })
       // },
       function fast_parse(callback){
-        rightSide.append("<div>Parsing XML file with MGF files</div>");
+        rightSide.append("<div>Fast parsing XML file</div>");
         rightSide.append('<div style="color:blue">Please be patient as this may take a while.  Progress can be viewed in the command line window.</div>');
         $.ajax({
           type:"POST",
