--- a/templates/tab_1.html
+++ b/templates/tab_1.html
@@ -100,7 +100,7 @@
         </span>
     </div>
     <div class="input-group" style="margin: 1%">
-      <span class="input-group-addon" id="basic-addon1">Perform largest-reporter recalibration</span>
+      <span class="input-group-addon" id="basic-addon1">Combine output</span>
       <select class='form-control' id="concat">
         <option value="0">DO NOT concatenate reporter files</option>
         <option value="1">Concatenate reporter files</option>
