Options reorganized and renamed.

--- a/templates/index_new.html
+++ b/templates/index_new.html
@@ -12,7 +12,7 @@
 		<nav class="navbar navbar-default height:10vh">
 	    <div class="container-fluid">
 	      <ul class="nav navbar-nav">
-	        <li name="tab_link" class="active" id="tab_2"><a href="#">WRITE PEPTIDES AND REPORTERS</a></li>
+	        <li name="tab_link" class="active" id="tab_2"><a href="#">WRITE PSMs & REPORTERS</a></li>
 	        <li name="tab_link">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
 	       	<li name="tab_link" class="active" id="tab_4"><a href="#">PLAIN PARSER</a></li>
 	       	<li name="tab_link">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
