TMT16 inverse matrix creation updated.

--- a/templates/tab_3.html
+++ b/templates/tab_3.html
@@ -365,9 +365,13 @@
             <tr>
               <th>Mass Tag</th>
               <th>-2</th>
+              <th>-2</th>
+              <th>-1</th>
               <th>-1</th>
               <th>Main</th>
               <th>1</th>
+              <th>1</th>
+              <th>2</th>
               <th>2</th>
             </tr>
             </thead>
@@ -376,129 +380,193 @@
                 <th>TMT-126</th>
                 <td><input type="text" class="form-control" id="126_NA1" value="0.0"></td>
                 <td><input type="text" class="form-control" id="126_NA2" value="0.0"></td>
+                <td><input type="text" class="form-control" id="126_NA3" value="0.0"></td>
+                <td><input type="text" class="form-control" id="126_NA4" value="0.0"></td>
                 <td><input type="text" class="form-control" id="126_126" value="100.0"></td>
+                <td><input type="text" class="form-control" id="126_127N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="126_127C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="126_128N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="126_128C" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-127N</th>
                 <td><input type="text" class="form-control" id="127N_NA1" value="0.0"></td>
+                <td><input type="text" class="form-control" id="127N_NA2" value="0.0"></td>
+                <td><input type="text" class="form-control" id="127N_NA3" value="0.0"></td>
                 <td><input type="text" class="form-control" id="127N_126" value="0.0"></td>
                 <td><input type="text" class="form-control" id="127N_127N" value="100.0"></td>
+                <td><input type="text" class="form-control" id="127N_127C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="127N_128N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="127N_128C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="127N_129N" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-127C</th>
                 <td><input type="text" class="form-control" id="127C_NA1" value="0.0"></td>
+                <td><input type="text" class="form-control" id="127C_NA2" value="0.0"></td>
                 <td><input type="text" class="form-control" id="127C_126" value="0.0"></td>
+                <td><input type="text" class="form-control" id="127C_127N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="127C_127C" value="100.0"></td>
+                <td><input type="text" class="form-control" id="127C_128N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="127C_128C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="127C_129N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="127C_129C" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-128N</th>
                 <td><input type="text" class="form-control" id="128N_NA1" value="0.0"></td>
+                <td><input type="text" class="form-control" id="128N_126" value="0.0"></td>
                 <td><input type="text" class="form-control" id="128N_127N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="128N_127C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="128N_128N" value="100.0"></td>
+                <td><input type="text" class="form-control" id="128N_128C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="128N_129N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="128N_129C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="128N_130N" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-128C</th>
                 <td><input type="text" class="form-control" id="128C_126" value="0.0"></td>
+                <td><input type="text" class="form-control" id="128C_127N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="128C_127C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="128C_128N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="128C_128C" value="100.0"></td>
+                <td><input type="text" class="form-control" id="128C_129N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="128C_129C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="128C_130N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="128C_130C" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-129N</th>
                 <td><input type="text" class="form-control" id="129N_127N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="129N_127C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="129N_128N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="129N_128C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="129N_129N" value="100.0"></td>
+                <td><input type="text" class="form-control" id="129N_129C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="129N_130N" value="0.0"></td>
-                <td><input type="text" class="form-control" id="129N_131" value="0.0"></td>
+                <td><input type="text" class="form-control" id="129N_130C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="129N_131N" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-129C</th>
                 <td><input type="text" class="form-control" id="129C_127C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="129C_128N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="129C_128C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="129C_129N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="129C_129C" value="100.0"></td>
+                <td><input type="text" class="form-control" id="129C_130N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="129C_130C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="129C_131N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="129C_131C" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-130N</th>
                 <td><input type="text" class="form-control" id="130N_128N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="130N_128C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="130N_129N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="130N_129C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="130N_130N" value="100.0"></td>
+                <td><input type="text" class="form-control" id="130N_130C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="130N_131N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="130N_131C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="130N_132N" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-130C</th>
                 <td><input type="text" class="form-control" id="130C_128C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="130C_129N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="130C_129C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="130C_130N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="130C_130C" value="100.0"></td>
+                <td><input type="text" class="form-control" id="130C_131N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="130C_131C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="130C_132N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="130C_132C" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-131N</th>
                 <td><input type="text" class="form-control" id="131N_129N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="131N_129C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="131N_130N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="131N_130C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="131N_131N" value="100.0"></td>
+                <td><input type="text" class="form-control" id="131N_131C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="131N_132N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="131N_132C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="131N_133N" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-131C</th>
                 <td><input type="text" class="form-control" id="131C_129C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="131C_130N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="131C_130C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="131C_131N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="131C_131C" value="100.0"></td>
+                <td><input type="text" class="form-control" id="131C_132N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="131C_132C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="131C_133N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="131C_133C" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-132N</th>
                 <td><input type="text" class="form-control" id="132N_130N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="132N_130C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="132N_131N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="132N_131C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="132N_132N" value="100.0"></td>
+                <td><input type="text" class="form-control" id="132N_132C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="132N_133N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="132N_133C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="132N_134N" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-132C</th>
                 <td><input type="text" class="form-control" id="132C_130C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="132C_131N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="132C_131C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="132C_132N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="132C_132C" value="100.0"></td>
+                <td><input type="text" class="form-control" id="132C_133N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="132C_133C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="132C_134N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="132C_NA1" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-133N</th>
                 <td><input type="text" class="form-control" id="133N_131N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="133N_131C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="133N_132N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="133N_132C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="133N_133N" value="100.0"></td>
+                <td><input type="text" class="form-control" id="133N_133C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="133N_134N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="133N_NA1" value="0.0"></td>
+                <td><input type="text" class="form-control" id="133N_NA2" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-133C</th>
                 <td><input type="text" class="form-control" id="133C_131C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="133C_132N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="133C_132C" value="0.0"></td>
+                <td><input type="text" class="form-control" id="133C_133N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="133C_133C" value="100.0"></td>
+                <td><input type="text" class="form-control" id="133C_134N" value="0.0"></td>
                 <td><input type="text" class="form-control" id="133C_NA1" value="0.0"></td>
                 <td><input type="text" class="form-control" id="133C_NA2" value="0.0"></td>
+                <td><input type="text" class="form-control" id="133C_NA3" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-134N</th>
                 <td><input type="text" class="form-control" id="134N_132N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="134N_132C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="134N_133N" value="0.0"></td>
+                <td><input type="text" class="form-control" id="134N_133C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="134N_134N" value="100.0"></td>
                 <td><input type="text" class="form-control" id="131N_NA1" value="0.0"></td>
                 <td><input type="text" class="form-control" id="131N_NA2" value="0.0"></td>
+                <td><input type="text" class="form-control" id="131N_NA3" value="0.0"></td>
+                <td><input type="text" class="form-control" id="131N_NA4" value="0.0"></td>
               </tr>
             </tbody>
           </table>
